--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,12 @@ on:
     tags: [ 'v*.*' ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      note:
+        description: 'Notes'     
+        required: false
+        default: 'Manual trigger'
 
 env:
   REGISTRY: docker.io
@@ -62,6 +68,14 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=false
+            prefix=
+            suffix=
+          tags: |
+            type=pep440,pattern={{version}}
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
